# LinkGame

./: .gitignore  .qmlls.ini  CMakeLists.txt  LICENSE  Main.qml  README.md  TODO.md  gamelogic.cpp  gamelogic.h  main.cpp  version.in
cpp/: config.cpp  config.h  default_value.h  gamelogic.cpp  gamelogic.h  language.cpp  language.h  logger.cpp  settings.cpp  settings.h
doc/: GameFramework.md  ProjectImprovements.md
i18n/: LinkGame_en.ts  LinkGame_ja.ts  LinkGame_zh_CN.ts  qml_en.ts  qml_ja.ts  qml_zh_CN.ts
qml/: Cell.qml  GameBoard.qml  GameOver.qml  GameWindow.qml  Help.qml  Leaderboard.qml  Main.qml  MainMenu.qml  PlayerNameInput.qml  Settings.qml
qml/components/: Cell.qml  MyButton.qml  ThemeManager.qml
qml/theme/: DarkTheme.qml  LightTheme.qml  PinkTheme.qml  ThemeManager.qml
